--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.15",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.15",
-    "@angular/compiler": "~7.2.15",
-    "@angular/core": "~7.2.15",
-    "@angular/forms": "~7.2.15",
-    "@angular/platform-browser": "~7.2.15",
-    "@angular/platform-browser-dynamic": "~7.2.15",
-    "@angular/router": "~7.2.15",
-    "core-js": "^2.5.4",
+    "@angular/animations": "~8.0.3",
+    "@angular/cdk": "^8.0.1",
+    "@angular/common": "~8.0.3",
+    "@angular/compiler": "~8.0.3",
+    "@angular/core": "~8.0.3",
+    "@angular/forms": "~8.0.3",
+    "@angular/platform-browser": "~8.0.3",
+    "@angular/platform-browser-dynamic": "~8.0.3",
+    "@angular/router": "~8.0.3",
+    "core-js": "^3.1.4",
     "hammerjs": "^2.0.8",
-    "ng-zorro-antd": "^7.3.3",
+    "ng-zorro-antd": "^8.0.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.2",
-    "tslib": "^1.9.3",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.9",
-    "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "~7.2.15",
-    "@angular/language-service": "~7.2.15",
-    "@types/node": "~12.0.2",
-    "@types/jasmine": "~3.3.12",
+    "@angular-devkit/build-angular": "~0.800.6",
+    "@angular/cli": "~8.0.6",
+    "@angular/compiler-cli": "~8.0.3",
+    "@angular/language-service": "~8.0.3",
+    "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "codelyzer": "~5.0.1",
+    "@types/node": "~12.0.10",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -45,8 +45,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
-    "ts-node": "~8.1.0",
-    "tslint": "~5.16.0",
-    "typescript": "~3.2.4"
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "^3.5.1"
   }
 }
