--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.1.4",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^8.0.2",
+    "ngx-webstorage": "^4.0.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
