--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.1",
+    "@angular/animations": "~8.2.0-next.1",
     "@angular/cdk": "^8.0.2",
-    "@angular/common": "~8.1.1",
-    "@angular/compiler": "~8.1.1",
-    "@angular/core": "~8.1.1",
-    "@angular/forms": "~8.1.1",
-    "@angular/platform-browser": "~8.1.1",
-    "@angular/platform-browser-dynamic": "~8.1.1",
-    "@angular/router": "~8.1.1",
+    "@angular/common": "~8.2.0-next.1",
+    "@angular/compiler": "~8.2.0-next.1",
+    "@angular/core": "~8.2.0-next.1",
+    "@angular/forms": "~8.2.0-next.1",
+    "@angular/platform-browser": "~8.2.0-next.1",
+    "@angular/platform-browser-dynamic": "~8.2.0-next.1",
+    "@angular/router": "~8.2.0-next.1",
     "core-js": "^3.1.4",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^8.0.3",
@@ -30,10 +30,10 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.0",
-    "@angular/compiler-cli": "~8.1.1",
-    "@angular/language-service": "~8.1.1",
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular/cli": "~8.1.1",
+    "@angular/compiler-cli": "~8.2.0-next.1",
+    "@angular/language-service": "~8.2.0-next.1",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~12.0.12",
