--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0-next.1",
+    "@angular/animations": "~8.2.0-next.2",
     "@angular/cdk": "^8.1.1",
-    "@angular/common": "~8.2.0-next.1",
-    "@angular/compiler": "~8.2.0-next.1",
-    "@angular/core": "~8.2.0-next.1",
-    "@angular/forms": "~8.2.0-next.1",
-    "@angular/platform-browser": "~8.2.0-next.1",
-    "@angular/platform-browser-dynamic": "~8.2.0-next.1",
-    "@angular/router": "~8.2.0-next.1",
+    "@angular/common": "~8.2.0-next.2",
+    "@angular/compiler": "~8.2.0-next.2",
+    "@angular/core": "~8.2.0-next.2",
+    "@angular/forms": "~8.2.0-next.2",
+    "@angular/platform-browser": "~8.2.0-next.2",
+    "@angular/platform-browser-dynamic": "~8.2.0-next.2",
+    "@angular/router": "~8.2.0-next.2",
     "core-js": "^3.1.4",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^8.0.3",
@@ -30,13 +30,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.1",
-    "@angular/cli": "~8.1.1",
-    "@angular/compiler-cli": "~8.2.0-next.1",
-    "@angular/language-service": "~8.2.0-next.1",
-    "@types/jasmine": "~3.3.13",
+    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular/cli": "~8.1.2",
+    "@angular/compiler-cli": "~8.2.0-next.2",
+    "@angular/language-service": "~8.2.0-next.2",
+    "@types/jasmine": "^3.3.14",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~12.6.6",
+    "@types/node": "^12.6.8",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
